# scitex-todo

./: .djfinal.txt  .djs.txt  .env.example  .envrc  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  eslint.config.js  fonts-liberation_1%3a2.1.5-3_all.deb  libasound2t64_1.2.11-1ubuntu0.2_amd64.deb  libavif16_1.0.4-1ubuntu3_amd64.deb  libcups2t64_2.4.7-1.2ubuntu7.13_amd64.deb  libgbm1_25.2.8-0ubuntu0.24.04.1_amd64.deb  libnss3_2%3a3.98-1ubuntu0.1_amd64.deb  pyproject.toml
.githooks/: _lib.sh  post-commit  pre-push
.github/ci/: audit.sh  build-in-sif.sh  exec-in-sif.sh  import-smoke.sh  publish-in-sif.sh  publish-with-uv.sh  run-in-sif.sh
.github/workflows/: auto-merge-to-develop.yaml  ci.yml  cla.yml  import-smoke-on-ubuntu-py3-12.yml  newb-docs-quality-on-ubuntu-latest.yml  pr-ci.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-cards-quality-audit-on-ubuntu-latest.yml  scitex-dev-quality-audit-on-ubuntu-latest.yml  scitex-todo-quality-audit-on-ubuntu-latest.yml
.old/20260713-column-table-removal/: 08-time-grouping.css
.playwright-cli/: page-2026-05-27T04-52-28-336Z.yml
.scitex/dev/: cli-audit-dict.yaml  config.yaml
docs/: CHEATSHEET-fleet-todo.md  roadmap.md
docs/adr/: 0001-universal-task-layer.md  0002-kind-as-closed-literal-enum-and-fail-loud.md  0003-decisions-as-first-class-graph-nodes.md  0004-blocker-as-closed-literal-enum-orthogonal-to-kind.md  0006-full-board-ui-spec-filterbar-columns-blocking-you.md  0007-task-dataclass-as-single-schema-source.md  0008-fleet-task-management.md  0009-task-driven-feedback-four-careers.md  0010-cards-db-single-source-of-truth.md  0011-job-scheduler-model.md  0012-work-receipts-and-the-layering-rule.md  0013-view-scoped-queries-not-corpus-shipping.md  0015-one-hub-not-per-host-sync.md
docs/design/: remote-hub-backend.md  sqlite-migration.md
docs/ops/: scitex-cards-hub-tunnel.service
docs/sphinx/: cli_reference.rst  conf.py  index.rst
examples/: 00_run_all.sh  01_render_graph.py  seed-fleet-epics-2026-06-02.sh
scripts/: install-todo-git-hooks.sh
signatures/: cla.json
src/scitex_cards/: __init__.py  __main__.py  _backend.py  _backend_http.py  _channel_drain_state.py  _channel_guard.py  _channel_identity.py  _config.py  _console_script_probe.py  _currency.py  _db.py  _db_bootstrap.py  _db_cards.py  _db_export.py  _db_freshness.py  _db_mirror.py  _db_rehearse.py  _db_sections.py  _deadlines.py  _dual_write.py  _env_compat.py  _events.py  _git_link.py  _groups.py  _health.py  _health_cards.py  _health_channel_reach.py  _health_write_target.py  _help_wait.py  _idle_guard.py  _inbox.py  _inbox_maint.py  _inbox_sqlite.py  _index.py  _install_probe.py  _jobs_provider.py  _legacy_yaml_migration.py  _liveness.py  _may_stop.py  _mcp_app.py  (+47 more)
src/scitex_todo/: __init__.py  __main__.py  _backlog_triage.py  _channel_drain_state.py  _channel_guard.py  _channel_identity.py  _cli.py  _config.py  _db.py  _db_bootstrap.py  _db_freshness.py  _db_mirror.py  _db_payload.py  _db_sections.py  _deadlines.py  _dual_write.py  _events.py  _git_link.py  _groups.py  _health.py  _health_cards.py  _hooks.py  _hooks_pr_merged.py  _hooks_processed.py  _idle_guard.py  _inbox.py  _inbox_maint.py  _inbox_sqlite.py  _index.py  _install_probe.py  _jobs_provider.py  _liveness.py  _mcp_app.py  _mcp_channel.py  _mcp_instructions.py  _mcp_relations.py  _mcp_server.py  _mcp_skills.py  _mcp_write.py  _mermaid.py  (+43 more)
stub/scitex-todo/: README.md  pyproject.toml
tests/: _store_damage.py  conftest.py  conftest.py.PROPOSED  test__store_isolation_guard.py  test_board_handlers_use_cached_read.py  test_cli_gui.py  test_conftest_store_guard.py  test_db_mirror_incremental.py  test_deadline_tz_aware.py  test_decoupling_gate.py  test_reminder_cadence.py  test_scitex_cards_alias.py  test_stub_version_sync.py
tests/develop/: test_audit.py
tests/examples/: test_01_render_graph.py  test_seed-fleet-epics-2026-06-02.py
tests/integration/: test_cross_package_imports.py  test_peer_edges.py
tests/scitex_cards/: conftest.py  test__ambient_store_creation.py  test__backend_seam.py  test__backlog_triage.py  test__blocked.py  test__board_v3_signatures.py  test__cancelled_status.py  test__card_message_event.py  test__channel_size_guard.py  test__completion_stamp_honesty.py  test__config.py  test__console_script_shadowing.py  test__crash_safe_writer.py  test__currency.py  test__dateinfo.js  test__db.py  test__db_bootstrap.py  test__db_export.py  test__db_recovery.py  test__db_rehearse.py  test__deadline.py  test__deadline_multi_recurring.py  test__deadline_never_notifies.py  test__digest_ranked.py  test__dm_read_caches.py  test__dual_write.py  test__edge_subscribes_waiter.py  test__entry_points_cached.py  test__enum_clear.py  test__env_compat.py  test__events.py  test__git_link.py  test__git_link_event_producers.py  test__group_field.py  test__groups.py  test__health.py  test__health_channel_reach.py  test__health_falsely_blocked.py  test__health_store_identity.py  test__health_write_target.py  (+81 more)
tests/scitex_todo/: conftest.py  test__backlog_triage.py  test__blocked.py  test__board_v3_signatures.py  test__cancelled_status.py  test__card_message_event.py  test__card_message_reply_to_event_id.py  test__channel_size_guard.py  test__cli.py  test__completion_stamp_honesty.py  test__config.py  test__crash_safe_writer.py  test__db.py  test__deadline.py  test__deadline_multi_recurring.py  test__deadline_never_notifies.py  test__digest_ranked.py  test__dual_write.py  test__edge_subscribes_waiter.py  test__entry_points_cached.py  test__enum_clear.py  test__events.py  test__git_link.py  test__git_link_event_producers.py  test__group_field.py  test__groups.py  test__health.py  test__health_falsely_blocked.py  test__health_zombie_cards.py  test__help_wait.py  test__hooks.py  test__hooks_ordering.py  test__hooks_plugin_timeout.py  test__idle_guard.py  test__import_order.py  test__inbox.py  test__inbox_digest_collapse.py  test__inbox_sqlite.py  test__index.py  (+65 more)
(+667 files in other folders)
