[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-todo"
version = "0.10.0"
description = "Canonical YAML task store with pluggable adapters (mermaid dependency graphs)"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe" },
]
keywords = ["todo", "tasks", "dependency-graph", "mermaid", "science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# `scitex_config` is a FOUNDATIONAL ecosystem lib (not a leaf peer): it
# supplies `local_state.user_path`, the user-canonical path resolver the
# shadow-SQLite adapter (`_db.resolve_db_path`) delegates to instead of
# re-rolling a project/user precedence (RFC #348 S0).
dependencies = ["pyyaml", "click", "ruamel.yaml", "scitex_config"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    # >=0.17.11 for the JobSpec service|timer|cron taxonomy + new
    # restart_policy field used by _jobs_provider.provide_jobs(). Older
    # versions don't have the kwarg and the leaf TypeErrors on import.
    "scitex-dev>=0.17.11",
    # Web-extra deps are imported (guarded) by the Django board source and its
    # tests; include them so a fresh `pip install -e .[dev]` runs the full
    # suite rather than silently skipping the board tests (PS-210).
    "django>=4.2",
    "scitex_app",
    "scitex_ui",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
web = [
    "django>=4.2",
    "scitex-app",
    "scitex-ui",
]
mcp = [
    # FastMCP is the canonical SciTeX MCP SDK (general skill §1). The MCP
    # tools live in `scitex_todo._mcp_server`; the CLI `mcp` subgroup
    # guards the import so the rest of the package keeps working without
    # this extra installed.
    "fastmcp>=2.0",
]
all = [
    "scitex-todo[dev,docs,mcp,web]",
]

[project.scripts]
scitex-todo = "scitex_todo._cli:main"
# `scitex-cards` is the name the operator is moving to (it matches scitex-hub's
# "Cards" surface). Shipping the BINARY first, ahead of the full rename, is the
# cheap half of the bridge: same entry point, second name, zero behaviour change.
#
# It is NOT sufficient on its own. His startup loop
# (~/.bash.d/secrets/010_scitex/03_gui.src) does:
#
#     dir="$HOME/proj/$pkg";              [ ! -d "$dir" ] && skip
#     bin="$HOME/proj/$pkg/.venv/bin/$pkg"; [ -x "$bin" ] && "$bin" gui serve &
#
# so it ALSO needs ~/proj/scitex-cards to exist as a directory. This entry point
# provides the `.venv/bin/scitex-cards` half; the directory half is a symlink (or
# the real rename). Read the script before assuming an alias alone lights it up —
# it does not.
scitex-cards = "scitex_todo._cli:main"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-todo"
Repository = "https://github.com/ywatanabe1989/scitex-todo"
Issues = "https://github.com/ywatanabe1989/scitex-todo/issues"
Documentation = "https://scitex-todo.readthedocs.io"

[project.entry-points."scitex_dev.docs"]
scitex-todo = "scitex_todo"

[project.entry-points."scitex_dev.skills"]
scitex-todo = "scitex_todo"

# Federated scheduled-job aggregation. scitex-dev `ecosystem up`
# discovers this entry point and brings the declared JobSpec(s) up
# via `systemctl --user` (kind="service" / "timer") or the managed
# crontab block (kind="cron"). See src/scitex_todo/_jobs_provider.py.
[project.entry-points."scitex_dev.jobs"]
scitex-todo = "scitex_todo._jobs_provider:provide_jobs"

# Hook-consumer entry-point contract (lead a2a `6fff33d6` +
# `fbffb879`, 2026-06-14, operator-mandated). External producers
# (SAC's push-hook, dev's merge-Action, future federated producers)
# register a callable plugin under this group. The dispatcher in
# `scitex_todo._hooks.dispatch_event` invokes every plugin for every
# event. Plugin signature:
#
#     def on_event(event: dict) -> None: ...
#
# See `scitex_todo._hooks` for the canonical event-payload spec and
# the built-in handlers (which run regardless of plugins).
# Standalone notification-DELIVERY channel registry (slice 1). The
# delivery loop (`scitex-todo deliver`) discovers channels registered
# under this group via importlib.metadata and hands each pending
# notification to the channels a user is configured for in
# recipients.yaml. Channel plugin = a class implementing the
# DeliveryChannel Protocol (attribute `name`, synchronous `deliver`).
# This group name is DELIBERATELY distinct from any
# `scitex_agent_container.*` group — scitex-todo's delivery rail is
# fully independent of sac (ZERO sac imports). See
# src/scitex_todo/_delivery/_registry.py.
[project.entry-points."scitex_todo.delivery_channels"]
log = "scitex_todo._delivery._channels.log:LogChannel"
telegram = "scitex_todo._delivery._channels.telegram:TelegramChannel"

[project.entry-points."scitex_todo.hooks"]
# scitex-todo's built-in handler is invoked DIRECTLY by
# dispatch_event (not via the plugin loop). External producers add
# their plugins under this group in their own pyproject.toml.

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_todo"]
# Bundle the Django app's non-Python assets (manifest, templates, built
# frontend) into the wheel so `scitex-todo board` works from a pip install.
artifacts = [
    "src/scitex_todo/_django/manifest.json",
    "src/scitex_todo/_django/templates/**/*",
    "src/scitex_todo/_django/static/**/*",
    # Agent-facing skills + bundled example store — read at runtime by
    # `scitex-todo skills get/install` and `bundled_example()`.
    "src/scitex_todo/_skills/**/*",
    "src/scitex_todo/examples/*.yaml",
    # Pre-built Sphinx HTML served in-wheel by scitex-cloud (PS-121);
    # refreshed by the docs workflow on main/develop pushes.
    "src/scitex_todo/_sphinx_html/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `-p no:anyio` — DO NOT REMOVE WITHOUT READING THIS.
#
# The anyio pytest plugin is auto-loaded (anyio is a transitive dependency, so the
# plugin arrives whether we want it or not) and it HANGS THIS SUITE. Symptom:
# test__channel_size_guard.py runs 5 tests, then wedges FOREVER on the 6th, with no
# output, no error, and no traceback. It is a silent, indefinite hang — the worst
# possible failure mode in CI, because it looks like a slow runner rather than a bug.
#
# Cause: our async seams are driven by `asyncio.run()` INSIDE SYNC test functions (this
# repo has no pytest-asyncio). A sync test that creates and tears down its OWN event loop
# — twice, in one test body — collides with the plugin's session-level loop management,
# and the second `asyncio.run()` never returns.
#
# Proven by a single-variable experiment: the same file HANGS by default and passes
# 10/10 with `-p no:anyio`. Nothing else changed.
#
# Turning it off is free: NOTHING in this repo uses it. There is not one `pytest.mark.anyio`
# and not one `anyio_backend` fixture in tests/. The plugin is pure liability here — it is
# needed by no test and it wedges the suite. (anyio the LIBRARY is still used in
# `_mcp_channel.drain_once`; this disables only its pytest PLUGIN.)
#
# If you ever add a genuinely anyio-driven test, drop this flag and give that ONE mechanism
# ownership of the loop — do not let two things manage event loops in the same session.
addopts = "-x -q -p no:anyio"

[tool.coverage.run]
parallel = true
source = ["scitex_todo"]
concurrency = ["multiprocessing", "thread"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples"]

[tool.scitex_dev.audit]
# PS-168 — Per-package secret + env-var prefix in GitHub Actions workflows.
# `GH_PERSONAL_ACCESS_TOKEN` is the ecosystem-wide cross-cutting PAT used
# by the contributor-assistant CLA action. The natural GITHUB_* namespace
# is reserved by GitHub Actions on the secret-name surface (HTTP 422 on
# every `gh secret set`), so the GH_ shorthand is the canonical
# substitute and is registered ecosystem-wide via PR #122 on scitex-dev
# (EXCEPTION_SECRETS_DEFAULT). This per-package entry pins the same
# exception inline so the audit passes on every scitex-dev version,
# independent of release timing.
ps168_secret_exceptions = ["GH_PERSONAL_ACCESS_TOKEN"]
