# The scitex-todo DEPRECATION STUB (S3 of the rename migration, ADR-0010 era).
#
# PyPI has no rename: old pins (`pip install scitex-todo`, `scitex-todo>=0.x`)
# must keep resolving after the package became scitex-cards. This dist is
# METADATA-ONLY — it ships ZERO modules, because scitex-cards already provides
# the `scitex_todo` import shim; a stub that shipped files would collide with
# it inside one site-packages. Installing this pulls scitex-cards, and both
# the legacy import name and the legacy `scitex-todo` CLI keep working.
#
# The version tracks the main package RELEASE FOR RELEASE — enforced by
# tests/test_stub_version_sync.py, so a release cannot forget the bump.
[build-system]
requires = ["hatchling>=1.19"]
build-backend = "hatchling.build"

[project]
name = "scitex-todo"
version = "0.16.0"
description = "DEPRECATED: renamed to scitex-cards. This stub installs scitex-cards; imports and the scitex-todo CLI keep working."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe" },
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3",
]
dependencies = ["scitex-cards>=0.14.0"]

[project.urls]
Homepage = "https://github.com/scitex-ai/scitex-cards"
Repository = "https://github.com/scitex-ai/scitex-cards"

# Metadata-only wheel: no file selection at all (hatchling's documented
# escape hatch). The sdist still carries this pyproject + README.
[tool.hatch.build.targets.wheel]
bypass-selection = true
