# The scitex-todo DEPRECATION STUB (S3 of the rename migration, ADR-0010 era).
#
# PyPI has no rename: old pins (`pip install scitex-todo`, `scitex-todo>=0.x`)
# must keep resolving after the package became scitex-cards. This dist is
# METADATA-ONLY — it ships ZERO modules, because scitex-cards already provides
# the `scitex_todo` import shim; a stub that shipped files would collide with
# it inside one site-packages. Installing this pulls scitex-cards, and both
# the legacy import name and the legacy `scitex-todo` CLI keep working.
#
# The version tracks the main package RELEASE FOR RELEASE — enforced by
# tests/test_stub_version_sync.py, so a release cannot forget the bump.
[build-system]
requires = ["hatchling>=1.19"]
build-backend = "hatchling.build"

[project]
name = "scitex-todo"
version = "0.17.1"
description = "DEPRECATED: renamed to scitex-cards. This stub installs scitex-cards; imports and the scitex-todo CLI keep working."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe" },
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3",
]
dependencies = ["scitex-cards>=0.14.0"]

# THE UPGRADE SELF-HEAL (card scitex-cards-alias-destroyed-by-uninstall-order-
# collision-20260717): old scitex-todo 0.13.x-0.15.x wheels OWN both console
# scripts in their RECORD, so `pip install -U scitex-todo` deletes
# bin/scitex-todo AND bin/scitex-cards during the old wheel's uninstall — and
# pip processes dependencies FIRST, so even a same-transaction scitex-cards
# reinstall has its freshly-written scripts destroyed by the uninstall that
# follows it. The stub is the LAST dist processed in that transaction, so the
# stub itself must recreate both scripts. The import target lives in the
# scitex-cards dependency; declaring it here adds no modules to the wheel.
[project.scripts]
scitex-todo = "scitex_cards._cli:main"
scitex-cards = "scitex_cards._cli:main"

[project.urls]
Homepage = "https://github.com/scitex-ai/scitex-cards"
Repository = "https://github.com/scitex-ai/scitex-cards"

# Metadata-only wheel: no file selection at all (hatchling's documented
# escape hatch). The sdist still carries this pyproject + README.
[tool.hatch.build.targets.wheel]
bypass-selection = true
